[package]
name = "rorg_agenda"
version = "0.1.0"
authors = ["VictorBoizan <victorboizan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
regex = "1"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
crossterm = "0.18"
